k8s/fedmed-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fedmed-system
  labels:
    name: fedmed-system
    environment: production
