k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fedmed
  labels:
    app.kubernetes.io/name: fedmed
    app.kubernetes.io/part-of: fedmed-platform
